<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll">
    <LinearLayout
        android:id="@+id/heading_layout_m"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:id="@+id/cv3"
        xmlns:android="http://schemas.android.com/apk/res/android"
        app:cardElevation="0dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_margin="5dp"
            android:paddingBottom="20dp"
            android:orientation="vertical"
            android:weightSum="1">



            <LinearLayout
                android:id="@+id/heading_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/who_can"
                    android:textStyle="bold"
                    android:textSize="20sp" />
            </LinearLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/deeksha_rules" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
        <View
            android:layout_width="wrap_content"
            android:layout_height="12dp"
            android:background="@android:color/darker_gray" />

        <android.support.v7.widget.CardView
        android:id="@+id/cv4"
        xmlns:android="http://schemas.android.com/apk/res/android"
        app:cardElevation="0dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_margin="5dp"
            android:paddingBottom="20dp"
            android:orientation="vertical"
            android:weightSum="1">



            <LinearLayout
                android:id="@+id/heading_layout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_heading4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/where"
                    android:textStyle="bold"
                    android:textSize="20sp" />
            </LinearLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/deeksha_rules1" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
        <View
            android:layout_width="wrap_content"
            android:layout_height="12dp"
            android:background="@android:color/darker_gray" />

        <android.support.v7.widget.CardView
            android:id="@+id/cv5"
            xmlns:android="http://schemas.android.com/apk/res/android"
            app:cardElevation="0dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            xmlns:app="http://schemas.android.com/apk/res-auto">

            <LinearLayout

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_margin="5dp"
                android:paddingBottom="20dp"
                android:orientation="vertical"
                android:weightSum="1">



                <LinearLayout
                    android:id="@+id/heading_layout5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_heading5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/when"
                        android:textStyle="bold"
                        android:textSize="20sp" />
                </LinearLayout>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:background="@android:color/darker_gray" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/deeksha_rules2" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
        <View
            android:layout_width="wrap_content"
            android:layout_height="12dp"
            android:background="@android:color/darker_gray" />

        <android.support.v7.widget.CardView
            android:id="@+id/cv6"
            xmlns:android="http://schemas.android.com/apk/res/android"
            app:cardElevation="0dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            xmlns:app="http://schemas.android.com/apk/res-auto">

            <LinearLayout

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_margin="5dp"
                android:paddingBottom="20dp"
                android:orientation="vertical"
                android:weightSum="1">



                <LinearLayout
                    android:id="@+id/heading_layout6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_heading6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/What_to_do"
                        android:textStyle="bold"
                        android:textSize="20sp" />
                </LinearLayout>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:background="@android:color/darker_gray" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/deeksha_rules3" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>