<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/expandableButton1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ba1f04"
        android:drawableRight="@android:drawable/arrow_down_float"
        android:onClick="expandableButton1"
        android:paddingRight="10dp"
        android:text="Expandable Layout Example"
        android:textColor="#fff" />

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:id="@+id/expandableLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/expandableButton1"
        android:background="#90ba1f04"
        android:padding="16dp"
        app:ael_duration="400"
        app:ael_expanded="false"
        app:ael_interpolator="bounce"
        app:ael_orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:id="@+id/text1" />
    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>


    <Button
        android:id="@+id/expandableButton2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expandableLayout1"
        android:background="#b77803"
        android:drawableRight="@android:drawable/arrow_down_float"
        android:onClick="expandableButton2"
        android:paddingRight="10dp"
        android:text="Expandable Views Tutorial"
        android:textColor="#fff" />

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:id="@+id/expandableLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/expandableButton2"
        android:background="#90b77803"
        android:padding="16dp"
        app:ael_duration="400"
        app:ael_expanded="false"
        app:ael_interpolator="bounce"
        app:ael_orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deeksha_rules1" />
    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

    <Button
        android:id="@+id/expandableButton3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expandableLayout2"
        android:background="#10a106"
        android:drawableRight="@android:drawable/arrow_down_float"
        android:onClick="expandableButton3"
        android:paddingRight="10dp"
        android:text="Expand/Collapse Android Widgets"
        android:textColor="#fff" />

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:id="@+id/expandableLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/expandableButton3"
        android:background="#9010a106"
        android:padding="16dp"
        app:ael_duration="400"
        app:ael_expanded="false"
        app:ael_interpolator="bounce"
        app:ael_orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deeksha_rules2" />
    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>


    <Button
        android:id="@+id/expandableButton4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expandableLayout3"
        android:background="#066da1"
        android:drawableRight="@android:drawable/arrow_down_float"
        android:onClick="expandableButton4"
        android:paddingRight="10dp"
        android:text="Expand/Collapse Android Example"
        android:textColor="#fff" />

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:id="@+id/expandableLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/expandableButton4"
        android:background="#90066da1"
        android:padding="16dp"
        app:ael_duration="400"
        app:ael_expanded="false"
        app:ael_interpolator="bounce"
        app:ael_orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deeksha_rules3" />
    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>
</RelativeLayout>
    </ScrollView>